--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link rel="stylesheet" href="style.css">
   <title>Пример веб-страницы</title>
  </head>
  <body>
@@ -11,7 +12,4 @@
   <p>Второй абзац.</p>
  </body>
 </html>
-
-Посмотреть пример
-Посмотреть пример
 
