--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <title>Пример веб-страницы</title>
  </head>
  <body>
-  <h1>Заголовок</h1>
+  <h1>Заголовок главный</h1>
   <!-- Комментарий -->
   <p>Первый абзац.</p>
   <p>Второй абзац.</p>
  </body>
 </html>
-
