--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Пример веб-страницы</title>
  </head>
  <body>
-  <h1>Привет, пользователь!</h1>
+  <h1>Привет, пользователь! Сегодня 14-02-2020</h1>
   <!-- Комментарий -->
   <p>Первый абзац.</p>
   <p>Второй абзац.</p>
